fix terminal width on mobile

--- a/src/components/Terminal/Terminal.module.scss
+++ b/src/components/Terminal/Terminal.module.scss
@@ -1,5 +1,5 @@
 .terminalContainer {
   padding-top: 30px;
-  width: 500px;
+  max-width: 500px;
 }
 
